Styling of player list & moves start button to top

--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
   </head>
   <body>
     <div id="main">
-      <div id="player"></div>
+      <div id="start">
+        <button disabled="true" class="button">Start Game</button>
+      </div>
+      <div id="players"></div>
       <div id="chat"></div>
     </div>
     <script type="text/jsx">
       /** @jsx React.DOM */
       // The above declaration must remain intact at the top of the script.
 
+      var startGame = function() {
+        console.log("TODO: Start the game");
+      };
+
       var socket = io("http://localhost:3001");
 
       var Status = React.createClass({
         render: function() {
           if(this.props.connected) {
-            return <div>There are currently {this.props.players} players connected</div>
+            return <div>There are currently {this.props.players} players connected.</div>
           } else {
             return <div>Server is down. I repeat: The server is down! Panic is advisable!</div>
           }
@@ -41,7 +48,6 @@
       var Chat = React.createClass({
         getInitialState: function() {
           socket.on('chat', function(message) {
-            console.log(message)
             var messages = this.state.messages;
             messages.push(message);
             this.setState({messages: messages});
@@ -72,7 +78,7 @@
               </div>
               <form onSubmit={this.emitMessage}>
                 <input onChange={this.onChange} value={this.state.message} />
-                <button>Send</button>
+                <button className='button send' disabled='true'>Send</button>
               </form>
             </div>
           )
@@ -90,10 +96,20 @@
           socket.on("allPlayers", function(data) {
             this.setState({
               players: data, 
-              disabled: {start: (data.length < 2 && data.length > 5), join: this.state.disabled.join}
+              disabled: {join: this.state.disabled.join}
             });
+            this.checkStart();
           }.bind(this));
           return {players: [], disabled: {join: true, start: true}};
+        },
+
+        checkStart: function() {
+          var players = this.state.players.length;
+          if(players < 2 || players > 5) {
+              $('#start button').attr('disabled');
+          } else {
+              $('#start button').removeAttr('disabled');
+          }
         },
 
         onChange: function(e) {
@@ -103,11 +119,11 @@
 
         handleSubmit: function(e) {
           e.preventDefault();
+          name = this.state.name;
           socket.emit("join", this.state.name);
-        },
-
-        startGame: function() {
-          console.log("TODO: Start the game");
+          $('form.name button').attr('disabled', 'true');
+          $('button.send').removeAttr('disabled');
+          this.checkStart();
         },
 
         render: function() {
@@ -115,18 +131,17 @@
             <div>
               <Status connected={this.state.connected} players={this.state.players.length} />
               <PlayerList players={this.state.players} />
-              <form onSubmit={this.handleSubmit}>
+              <form className='name' onSubmit={this.handleSubmit}>
                 <input onChange={this.onChange} value={this.state.name} />
-                <button disabled={this.state.disabled.join}>Join game</button>
+                <button className='button' disabled={this.state.disabled.join}>Join game</button>
               </form>
-              <button disabled={this.state.disabled.start} onClick={this.startGame}>Start game</button>
             </div>
           );
         }
       
       });
 
-      React.renderComponent(<HaNaNabi />, document.getElementById('player'));
+      React.renderComponent(<HaNaNabi />, document.getElementById('players'));
       React.renderComponent(<Chat />, document.getElementById('chat'));
     </script>
   </body>
