--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>JSHanabi</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <script src="react"></script>
-    <script src="JSXTransformer"></script>
-    <script src="jquery"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <script src="js/react.js"></script>
+    <script src="js/JSXTransformer.js"></script>
+    <script src="js/jquery-1.11.1.js"></script>
+    <script src="socket.io.js"></script>
   </head>
   <body>
     <div id="main">
@@ -20,7 +20,7 @@
         socket.emit("startGame");
       };
 
-      var socket = io();
+      var socket = io(":3001");
 
       var Status = React.createClass({
         render: function() {
