Created abstracted user handler. Doesn't work yet!

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         socket.emit("startGame");
       };
 
-      var socket = io(":3001");
+      var socket = io(":3001/main");
 
       var Status = React.createClass({
         render: function() {
